--- a/.github/issues.yml
+++ b/.github/issues.yml
@@ -1,6 +1,6 @@
 Issues:
   opened: |
-    Hello @$AUTHOR
+    Hell]o @$AUTHOR
 
     We make use of an **[ISSUE TEMPLATE](https://github.com/$REPO_FULL_NAME/issues/new/choose)** to capture relevant information to support you best. Unfortunately, **you ignored or deleted** the given sections. Please take care that all information requested is provided.
 
